#add_subdirectory(helloworld)
#add_subdirectory(firstapp)
#add_subdirectory(asteroids)
#add_subdirectory(flappybird)
#add_subdirectory(duckandcover)
#add_subdirectory(viewer1)
#add_subdirectory(starfield)
#add_subdirectory(lookat)
#add_subdirectory(secondactivity)
#add_subdirectory(loadmodel)
#add_subdirectory(viewer2)
#add_subdirectory(viewer3)
#add_subdirectory(viewer4)
#add_subdirectory(viewer5)
#add_subdirectory(viewer6)
#add_subdirectory(viewer5_teste2)
#add_subdirectory(thirdactivity)
add_subdirectory(thirdactivityV2)