#add_subdirectory(helloworld)
#add_subdirectory(firstapp)
#add_subdirectory(asteroids)
#add_subdirectory(flappybird)
#add_subdirectory(duckandcover)
#add_subdirectory(viewer1)
#add_subdirectory(starfield)
#add_subdirectory(lookat)
# add_subdirectory(secondactivity)
add_subdirectory(thirdactivity)
#add_subdirectory(loadmodel)